tests/paczka1/fuzzy1/95802607.err
Error in line 1: S636 A187 55,3
Error in line 34: iaD0OJWPfh S636 85,0
